adicionando dinamicidade aos dados do card-game

--- a/playstation-store/src/app/components/card/card-label/card-label.component.html
+++ b/playstation-store/src/app/components/card/card-label/card-label.component.html
@@ -1,5 +1,5 @@
 <div class="label-container">
-    <div class="label-content">
-        <p>Exclusivo</p>
+    <div class="label-content" [ngStyle]="{'display':label_mode}">
+        <p>{{label_text}}</p>
     </div>
 </div>
