--- a/playstation-store/src/app/pages/offers/offers.component.html
+++ b/playstation-store/src/app/pages/offers/offers.component.html
@@ -4,11 +4,58 @@
     </div>
     <div class="offer-item-container">
         <ul>
-            <li><app-card></app-card></li>
-            <li><app-card></app-card></li>
-            <li><app-card></app-card></li>
-            <li><app-card></app-card></li>  
-            <li><app-card></app-card></li>    
+            <li>
+                <app-card 
+                img="../../../assets/bt-1.jpg"
+                title="Jogue agora!"
+                price="R$86,34"
+                [plataform]="['ps4', 'ps5']"
+                format="Digital"
+                label_text="Exclusivo"
+                ></app-card>
+            </li>
+            <li>
+                <app-card 
+                img="../../../assets/ac-cover.jpg"
+                title="Disponivel!"
+                price="R$236,34"
+                [plataform]="['ps4', 'ps5']"
+                format="Fisico"
+                label_text="Cross-buy"
+                label_mode="none"
+                ></app-card>
+            </li>
+            <li>
+                <app-card 
+                img="../../../assets/mw3.png"
+                title="Disponivel!"
+                price="R$236,34"
+                [plataform]="['ps4', 'ps5']"
+                format="Fisico"
+                label_text="Cross-buy"
+                label_mode="none"
+                ></app-card>
+            </li>
+            <li>
+                <app-card 
+                img="../../../assets/minecraft.jpeg"
+                title="Disponivel!"
+                price="R$99,34"
+                [plataform]="['ps4', 'ps5']"
+                format="Fisico"
+                label_text="Cross-buy"
+                ></app-card>
+            </li>
+            <li>
+                <app-card 
+                img="../../../assets/bt-4.jpg"
+                title="Jogue online!"
+                price="R$6,34"
+                [plataform]="['ps3','ps4', 'ps5']"
+                format="Fisico"
+                label_text="Cross-buy"
+                ></app-card>
+            </li>
         </ul>
     </div>
 </div>
