--- a/playstation-store/src/app/pages/offers/offers.component.html
+++ b/playstation-store/src/app/pages/offers/offers.component.html
@@ -51,7 +51,7 @@
                 img="../../../assets/bt-4.jpg"
                 title="Jogue online!"
                 price="R$6,34"
-                [plataform]="['ps3','ps4', 'ps5']"
+                [plataform]="['ps3','ps4']"
                 format="Fisico"
                 label_text="Cross-buy"
                 ></app-card>
