--- a/playstation-store/src/app/components/menu/menu.component.css
+++ b/playstation-store/src/app/components/menu/menu.component.css
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: flow;
     position: fixed;
+    top: 0;
     z-index: 99;
     background-color: white;
     padding: 0.5rem;
@@ -16,17 +17,16 @@
 
 .menu-logo {
     display: flex;
-    align-items: center;
+
 }
 
 .menu-btns-container{
     display: flex;
     margin: auto;
-    align-items: center;
 }
 .btns-list{
     display: flex;
-    justify-content: center;
+    margin: 0;
 }
 .btns-list > li{
     display: block;
@@ -36,7 +36,6 @@
 .btns-list > li > a{
     font-weight: 550; 
     padding: 0.3rem 1rem;
-    margin: 0 5px;
     color: black;
     font-size: 15px;
     transition-property: background-color, border-color;
@@ -49,5 +48,10 @@
 
 .btns-list> li> a:hover{
     background-color: #d4d4d4;
+    border-color: rgba(0, 0, 0, 0.299);
+}
+
+.btn-activate{
+    background-color: #d4d4d484;
     border-color: rgba(0, 0, 0, 0.299);
 }
