--- a/playstation-store/src/app/pages/home/home.component.html
+++ b/playstation-store/src/app/pages/home/home.component.html
@@ -1,3 +1,93 @@
 <div class="home-container">
-    <app-card></app-card>
+    <div class="home-img">
+        <img src="../../../assets/image-removebg-preview.png" alt="">
+    </div>
+    <div id="carousel" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+        <li data-target="#carousel" data-slide-to="0" class="active"></li>
+        <li data-target="#carousel" data-slide-to="1"></li>
+        <li data-target="#carousel" data-slide-to="2"></li>
+        <li data-target="#carousel" data-slide-to="3"></li>
+        </ol>
+        <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img class="d-block w-100" src="../../../assets/597965_resized.jpg" alt="Primeiro Slide">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="../../../assets/stretched-1920-1080-714040_resized.jpg" alt="Segundo Slide">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="../../../assets/1282982_resized.jpg" alt="Terceiro Slide">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="../../../assets/370408.png" alt="Terceiro Slide">
+        </div>
+        </div>
+        <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Anterior</span>
+        </a>
+        <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Próximo</span>
+        </a>
+    </div>
+    <div class="card-container">
+        <ul>
+            <li>
+                <app-game-card 
+                img_url="https://image.api.playstation.com/pr/bam-art/159/265/142dd38e-df8f-4663-823c-2d4d1a1bd3e4.jpg"
+                ></app-game-card>
+            </li>
+            <li>
+                <app-game-card 
+                img_url="https://image.api.playstation.com/pr/bam-art/163/945/3247ac35-8737-4e6f-9c6b-e7d617ab8de0.png"
+                ></app-game-card>
+            </li>
+            <li>
+                <app-game-card 
+                img_url="https://image.api.playstation.com/pr/bam-art/162/102/be34b511-4d4e-4cc7-a48c-55d112c40d56.png"
+                ></app-game-card>
+            </li>
+            <li>
+                <app-game-card 
+                img_url="https://image.api.playstation.com/pr/bam-art/163/145/ae13a8ef-c0d9-4ceb-bb18-328e71f87f05.jpg"
+                ></app-game-card>
+            </li>
+        </ul>
+    </div>
+    
 </div>
+
+
+
+<footer class=" text-center text-black">
+    <div class="container  text-center p-4 pb-0">
+      <section class="mb-4">
+        <a
+          class="btn text-white text-center btn-floating m-1"
+          style="background-color: #55acee;"
+          href="https://twitter.com/AxleGab"
+          target="_blank"
+          role="button"
+          ><i class="fab fa-twitter"></i
+        ></a>
+        <a
+          class="btn text-white text-center btn-floating m-1"
+          style="background-color: #0082ca;"
+          href="https://www.linkedin.com/in/alex-gabriel-007b89182/"
+          target="_blank"
+          role="button"
+          ><i class="fab fa-linkedin-in"></i
+        ></a>
+        <a
+          class="btn text-white text-center btn-floating m-1"
+          style="background-color: #333333;"
+          href="https://github.com/Gabriel-Axl"
+          target="_blank"
+          role="button"
+          ><i class="fab fa-github"></i
+        ></a>
+      </section>
+    </div>
+  </footer>
