--- a/playstation-store/src/app/pages/offers/offers.component.css
+++ b/playstation-store/src/app/pages/offers/offers.component.css
@@ -16,8 +16,9 @@
 }
 .offer-item-container > ul{
     display: flex;
-    justify-content: space-between;
-    padding: 3rem 6rem;
+    justify-content: space-around;
+    margin-top: 3rem;
+    padding: 0 10rem;
 }
 .offer-item-container > ul > li{
     justify-self: center;
