--- a/playstation-store/src/styles.css
+++ b/playstation-store/src/styles.css
@@ -1,10 +1,13 @@
+@import '~bootstrap/dist/css/bootstrap.min.css';
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: "Segoe UI";
 }
-
+p{
+    margin: 0;
+}
 body{
     background: rgb(2,0,36);
 background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(9,9,121,1) 100%);
