modificação nos links

--- a/playstation-store/src/app/components/game-card/game-card.component.html
+++ b/playstation-store/src/app/components/game-card/game-card.component.html
@@ -1,5 +1,8 @@
-<div class="card-container">
-    <div class="card-img">
-        <img src="{{img_url}}" alt="">
+
+<a [routerLink]="['']">
+    <div class="card-container">
+        <div class="card-img">
+            <img src="{{img_url}}" alt="">
+        </div>
     </div>
-</div>
+</a>
