--- a/playstation-store/src/app/components/menu/menu.component.html
+++ b/playstation-store/src/app/components/menu/menu.component.html
@@ -1,7 +1,8 @@
 <div class="menu-container">
-    <div class="menu-logo">
+    <a [routerLink]="['']"><div class="menu-logo">
         <img src="../../../assets/ps-logo.png" alt="">
-    </div>
+        </div>
+    </a>
     <div class="menu-btns-container">
         <ul class="btns-list">
             <li><a 
