--- a/playstation-store/src/app/components/card/card.component.html
+++ b/playstation-store/src/app/components/card/card.component.html
@@ -1,4 +1,4 @@
-<a href="" class="card-container-link">
+<a [routerLink]="['']" class="card-container-link">
     <div class="card-container">
         <div class="card-img-container">
             <img src="{{img}}" alt="">
